k8s/grafana/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: grafana
  name: grafana
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
    spec:
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
      containers:
        - name: grafana
          image: grafana/grafana:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http-grafana
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 250m
              memory: 750Mi
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-pv
            - name: grafana-datasources
              mountPath: /etc/grafana/provisioning/datasources
            - name: grafana-dashboards
              mountPath: /etc/grafana/provisioning/dashboards
            - name: custom-dashboards
              mountPath: /etc/dashboards/app
            - name: cluster-dashboards
              mountPath: /etc/dashboards/cluster
      volumes:
        - name: grafana-pv
          persistentVolumeClaim:
            claimName: grafana-pvc
        - configMap:
            name: grafana
            items:
              - key: datasources.yml
                path: datasources.yaml
          name: grafana-datasources
        - configMap:
            name: grafana
            items:
              - key: dashboards.yml
                path: dashboards.yaml
          name: grafana-dashboards
        - configMap:
            name: grafana
            items:
              - key: app-dashboard.json
                path: app-dashboard.json
              - key: pixie-dashboard.json
                path: pixie-dashboard.json
          name: custom-dashboards
        - configMap:
            name: cluster-dashboards-grafana
            items:
              - key: cluster.json
                path: cluster.json
          name: cluster-dashboards
