k8s/grafana/serivce.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: http-grafana
  selector:
    app.kubernetes.io/name: grafana
  sessionAffinity: None
  type: LoadBalancer
